# ktmall/ktmall_server/app/request/order.go
@@ -7,3 +7,8 @@ import (
 type OrderListReq struct {
 	OrderStatus models.OrderStatus `query:"orderStatus"`
 }
+
+type OrderGetPaySignReq struct {
+	TotalPrice float64 `json:"totalPrice"`
+	OrderId    uint    `json:"orderId"`
+}
